updated CPT API and database model with language fields and lambda functionality for Chinese and Spanish
Former-commit-id: e6a70310651385600d7ca52ada290d73459dd647
