# Source/Python/datalabs/model/cpt/api.py
@@ -56,6 +56,8 @@ class ShortDescriptor(Base):
 
     code = sa.Column(sa.String(5), sa.ForeignKey("cpt.code.code"), primary_key=True)
     descriptor = sa.Column(sa.String(28), nullable=False)
+    descriptor_spa = sa.Column(sa.String(28), nullable=False)  # Spanish
+    descriptor_chi = sa.Column(sa.String(28), nullable=False)  # Chinese
     modified_date = sa.Column(sa.Date, nullable=False)
     deleted = sa.Column(sa.Boolean, nullable=False, default=False)
 
@@ -66,6 +68,8 @@ class MediumDescriptor(Base):
 
     code = sa.Column(sa.String(5), sa.ForeignKey("cpt.code.code"), primary_key=True)
     descriptor = sa.Column(sa.String(48), nullable=False)
+    descriptor_spa = sa.Column(sa.String(48), nullable=False)  # Spanish
+    descriptor_chi = sa.Column(sa.String(48), nullable=False)  # Chinese
     modified_date = sa.Column(sa.Date, nullable=False)
     deleted = sa.Column(sa.Boolean, nullable=False, default=False)
 
@@ -76,6 +80,8 @@ class LongDescriptor(Base):
 
     code = sa.Column(sa.String(5), sa.ForeignKey("cpt.code.code"), primary_key=True)
     descriptor = sa.Column(sa.String(), nullable=False)
+    descriptor_spa = sa.Column(sa.String(), nullable=False)  # Spanish
+    descriptor_chi = sa.Column(sa.String(), nullable=False)  # Chinese
     modified_date = sa.Column(sa.Date, nullable=False)
     deleted = sa.Column(sa.Boolean, nullable=False, default=False)
 
@@ -86,6 +92,8 @@ class ConsumerDescriptor(Base):
 
     code = sa.Column(sa.String(5), sa.ForeignKey("cpt.code.code"), primary_key=True)
     descriptor = sa.Column(sa.String, nullable=False)
+    descriptor_spa = sa.Column(sa.String, nullable=False)  # Spanish
+    descriptor_chi = sa.Column(sa.String, nullable=False)  # Chinese
     modified_date = sa.Column(sa.Date, nullable=False)
     deleted = sa.Column(sa.Boolean, nullable=False, default=False)
 
@@ -96,6 +104,8 @@ class ClinicianDescriptor(Base):
 
     id = sa.Column(sa.Integer, primary_key=True)
     descriptor = sa.Column(sa.String, nullable=False)
+    descriptor_spa = sa.Column(sa.String, nullable=False)  # Spanish
+    descriptor_chi = sa.Column(sa.String, nullable=False)  # Chinese
     modified_date = sa.Column(sa.Date, nullable=False)
     deleted = sa.Column(sa.Boolean, nullable=False, default=False)
 
